--- a/site/app/globals.css
+++ b/site/app/globals.css
@@ -1,4 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  font-family: 'Bangers', cursive !important;
+  font-style: normal !important;
+}
 
